--- a/package.json
+++ b/package.json
@@ -9,23 +9,32 @@
     "build": "npm run clean-dist && webpack -p --config=configs/webpack/prod.js",
     "clean-dist": "rimraf dist/*",
     "lint": "eslint './src/**/*.{js,ts,tsx}' --quiet",
-    "test": "jest --coverage --watchAll --config=configs/jest.json"
+    "test": "jest"
+
   },
   "author": "Uladzislau Dubrouski",
   "license": "ISC",
   "dependencies": {
+    "@types/react-router-dom": "^5.1.6",
     "antd": "^4.7.0",
+    "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
     "@babel/plugin-external-helpers": "^7.10.4",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/plugin-syntax-jsx": "^7.12.1",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
     "@types/enzyme": "^3.10.7",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.14",
@@ -44,7 +53,7 @@
     "eslint-plugin-react": "^7.21.4",
     "file-loader": "^6.1.1",
     "html-webpack-plugin": "^4.5.0",
-    "jest": "^26.5.2",
+    "jest": "^26.6.0",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
     "node-sass": "^4.14.1",
